feature: filter temperature by its thermometerId
